--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
+    "@mui/material": "^7.3.6",
     "@mui/material-nextjs": "^7.3.6",
     "next": "16.0.10",
     "react": "19.2.1",
